--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,34 +1,3 @@
 spring:
-  jpa:
-    show-sql: true
-    hibernate:
-      ddl-auto: update
-    database-platform: org.hibernate.dialect.H2Dialect
-  data:
-    rest:
-      base-path: /api
-  datasource:
-    username: root
-    password:
-    url: jdbc:h2:mem:testdb
-    driverClassName: org.h2.Driver
-
-server:
-  port: "9090"
-
-# API Documentation config
-springdoc:
-  show-actuator: false
-  swagger-ui:
-    enabled: true
-    path: /swagger-ui.html
-  api-docs:
-    enabled: true
-    path: /api-docs
-
-# Actuator config
-management:
-  endpoints:
-    web:
-      exposure:
-        include: "*"
+  profiles:
+    active: prod
